src/QGraphicsTextItem.h


// 
// This file has been automatically generated by RaQt_maker V0.0.6.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQGraphicsTextItemCtor_1(void * parent);
EXTERNC void * SCWQGraphicsTextItemCtor_1(void * parent);
EXTERNC void * QWQGraphicsTextItemCtor_2(char * text, void * parent);
EXTERNC void * SCWQGraphicsTextItemCtor_2(char * text, void * parent);
EXTERNC void QWQGraphicsTextItemsetPlainText(void * obj, char * text);
EXTERNC void * QWQGraphicsTextItemfont(void * obj);
EXTERNC void QWQGraphicsTextItemsetFont(void * obj, void * font);
EXTERNC void * QWQGraphicsTextItemboundingRect(void * obj);
EXTERNC void QWQGraphicsTextItemadjustSize(void * obj);
EXTERNC void QWvalidateCB_QGraphicsTextItem(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQGraphicsTextItemDtor(void *);
EXTERNC void SCWQGraphicsTextItemDtor(void *);